Ajout des fonts

--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -1,11 +1,10 @@
+// GOLOS TEXT
+
 @import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
+// AWESOME SERIF
 
 @font-face {
   font-family: "AwesomeSerif";
   src: url(/fonts/AwesomeSerif-Regular.otf);
-}/*# sourceMappingURL=style.css.map */
+}
