--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -5,7 +5,52 @@
   box-sizing: border-box;
 }
 
+a {
+  font-family: "Golos Text";
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
 @font-face {
   font-family: "AwesomeSerif";
   src: url(/public/fonts/AwesomeSerif-BoldExtraTall.otf);
+}
+header {
+  color: #b10000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 2vw;
+}
+header .badge {
+  width: 130px;
+}
+header .center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+header .center .image {
+  height: 100px;
+  pointer-events: none;
+}
+header .center .image img {
+  transform: scale(4);
+}
+header .center .links {
+  display: flex;
+  gap: 2vw;
+}
+header .center .links a {
+  font-weight: 500;
 }/*# sourceMappingURL=style.css.map */
