Ajout fontawesome et icones pour le searchbar

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -16,3 +16,13 @@ img {
   object-fit: cover;
   object-position: center;
 }
+
+.redColor {
+  color: $Red;
+}
+.brownColor {
+  color: $Brown;
+}
+.whiteColor {
+  color: $White;
+}
