Ajout de la page d'accueil et de sa feuille de stylz

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -120,4 +120,9 @@ header .right .cartShopping {
 }
 header .right .cartShopping:hover {
   cursor: pointer;
+}
+
+#Accueil {
+  background: red;
+  height: 100vh;
 }/*# sourceMappingURL=style.css.map */
