--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -48,6 +48,7 @@ header {
           height: 2px;
           background: $Red;
           transition: transform 0.3s cubic-bezier(0.65, 0, 0.35, 1);
+          will-change: transform;
         }
       }
     }
