--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -82,6 +82,7 @@ header .center .links a::after {
   height: 2px;
   background: #b10000;
   transition: transform 0.3s cubic-bezier(0.65, 0, 0.35, 1);
+  will-change: transform;
 }
 header .right {
   display: flex;
