--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -123,7 +123,7 @@ header .right .cartShopping:hover {
   cursor: pointer;
 }
 
-#Accueil {
-  background: red;
-  height: 100vh;
+#Accueil .FirstSection {
+  background: #b10000;
+  height: 80vh;
 }/*# sourceMappingURL=style.css.map */
