Changement emplacement de la font

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -5,8 +5,11 @@
   box-sizing: border-box;
 }
 
-a {
+body {
   font-family: "Golos Text";
+}
+
+a {
   text-decoration: none;
   color: inherit;
 }
