--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -4,8 +4,11 @@
   box-sizing: border-box;
 }
 
-a {
+body {
   font-family: "Golos Text";
+}
+
+a {
   text-decoration: none;
   color: inherit;
 }
