--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -3,11 +3,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 2vw;
+  padding: 20px 2vw 30px;
   box-shadow: 0px -9px 39px 13px rgb(0 0 0 / 37%);
 
   .badge {
-    width: 130px;
+    width: 180px;
   }
 
   .center {
@@ -45,7 +45,7 @@ header {
           width: 100%;
           transform: scaleX(0);
           transform-origin: right;
-          height: 2px;
+          height: 1.5px;
           background: $Red;
           transition: transform 0.3s cubic-bezier(0.65, 0, 0.35, 1);
           will-change: transform;
