--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -44,11 +44,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 2vw;
+  padding: 20px 2vw 30px;
   box-shadow: 0px -9px 39px 13px rgba(0, 0, 0, 0.37);
 }
 header .badge {
-  width: 130px;
+  width: 180px;
 }
 header .center {
   display: flex;
@@ -82,7 +82,7 @@ header .center .links a::after {
   width: 100%;
   transform: scaleX(0);
   transform-origin: right;
-  height: 2px;
+  height: 1.5px;
   background: #b10000;
   transition: transform 0.3s cubic-bezier(0.65, 0, 0.35, 1);
   will-change: transform;
