--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -7,7 +7,8 @@ header {
   box-shadow: 0px -9px 39px 13px rgb(0 0 0 / 37%);
 
   .badge {
-    width: 180px;
+    // width: 180px;
+    width: 13vw;
   }
 
   .center {
