--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -48,7 +48,7 @@ header {
   box-shadow: 0px -9px 39px 13px rgba(0, 0, 0, 0.37);
 }
 header .badge {
-  width: 180px;
+  width: 13vw;
 }
 header .center {
   display: flex;
