--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -5,6 +5,7 @@ header {
   align-items: center;
   padding: 20px 2vw 30px;
   box-shadow: 0px -9px 39px 13px rgb(0 0 0 / 37%);
+  //   height: 20vh;
 
   .badge {
     // width: 180px;
