--- a/src/assets/sass/pages/_accueil.scss
+++ b/src/assets/sass/pages/_accueil.scss
@@ -1,6 +1,24 @@
 #Accueil {
   .FirstSection {
-    background: $Red;
-    height: 100vh;
+    height: 83vh;
+    .image {
+      position: relative;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      filter: brightness(0.95);
+      background: white;
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 65%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
   }
 }
