--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -128,10 +128,19 @@ header .right .cartShopping:hover {
 }
 
 #Accueil .FirstSection {
+  position: relative;
   height: 83vh;
+  color: #ffffff;
+  font-size: 45px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5vh;
 }
 #Accueil .FirstSection .image {
-  position: relative;
+  position: absolute;
   z-index: -1;
   width: 100%;
   height: 100%;
@@ -149,4 +158,33 @@ header .right .cartShopping:hover {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+#Accueil .FirstSection .title h1 {
+  font-family: "AwesomeSerif";
+}
+#Accueil .FirstSection button {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: #b10000;
+  border: none;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 15px 25px;
+  border-radius: 30px;
+}
+#Accueil .FirstSection button:hover {
+  cursor: pointer;
+}
+#Accueil .FirstSection .patternContainer {
+  position: absolute;
+  bottom: 2vh;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+}
+#Accueil .FirstSection .patternContainer img {
+  height: 53px;
+  width: 370px;
 }/*# sourceMappingURL=style.css.map */
