--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -13,6 +13,11 @@ a {
   color: inherit;
 }
 
+h1 {
+  font-family: "AwesomeSerif";
+  font-size: 65px;
+}
+
 img {
   width: 100%;
   height: 100%;
