--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -49,7 +49,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 2vw 30px;
+  padding: 20px 5vw 30px;
   box-shadow: 0px -9px 39px 13px rgba(0, 0, 0, 0.37);
 }
 header .badge {
@@ -191,4 +191,8 @@ header .right .cartShopping:hover {
 #Accueil .FirstSection .patternContainer img {
   height: 53px;
   width: 370px;
+}
+
+#Histoire {
+  padding: 0 5vw;
 }/*# sourceMappingURL=style.css.map */
