--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -194,5 +194,41 @@ header .right .cartShopping:hover {
 }
 
 #Histoire {
-  padding: 0 5vw;
+  display: flex;
+  justify-content: center;
+  padding: 20px 5vw;
+}
+#Histoire .FirstSection {
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
+  height: 700px;
+}
+#Histoire .FirstSection .contentContainer {
+  flex-grow: 1;
+  display: flex;
+  margin-top: 20px;
+}
+#Histoire .FirstSection .contentContainer img {
+  width: 50%;
+  height: 100%;
+}
+#Histoire .FirstSection .contentContainer .textsContainer {
+  padding-left: 5vw;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+#Histoire .FirstSection .contentContainer .textsContainer .paragraph {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: justify;
+}
+#Histoire .FirstSection .contentContainer .textsContainer .paragraph p {
+  font-weight: 600;
+}
+#Histoire .FirstSection .contentContainer .textsContainer .paragraph span,
+#Histoire .FirstSection .contentContainer .textsContainer .paragraph p {
+  font-size: 16px;
 }/*# sourceMappingURL=style.css.map */
