Changement des tailles des paddings

--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -1,4 +1,8 @@
 header {
+  position: fixed;
+  width: 100%;
+  z-index: 6;
+  background: $White;
   color: $Red;
   display: flex;
   justify-content: space-between;
