Ajout de flex direction column à la page histoire

--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -203,6 +203,7 @@ header .right .cartShopping:hover {
 
 #Histoire {
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 #Histoire .FirstSection,
