Ajout picto charte graphique et de son design

--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -74,7 +74,7 @@ header {
         border-radius: 20px;
         border: 1px solid $Red;
         padding: 8px 10px 8px 30px;
-        width: 10vw;
+        width: 140px;
         caret-color: $Red;
         color: $Red;
 
