--- a/src/assets/sass/pages/_histoire.scss
+++ b/src/assets/sass/pages/_histoire.scss
@@ -1,17 +1,18 @@
 #Histoire {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 
   .FirstSection,
   .SecondSection {
     padding: 20px 5vw;
+    max-width: 1440px;
   }
 
   .FirstSection {
     display: flex;
     flex-direction: column;
-    max-width: 1440px;
+
     height: 700px;
 
     .contentContainer {
@@ -28,7 +29,8 @@
         padding-left: 5vw;
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        justify-content: space-between;
+        // gap: 30px;
 
         .paragraph {
           display: flex;
@@ -43,6 +45,67 @@
           span,
           p {
             font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+
+  .SecondSection {
+    padding-top: 100px;
+    .title {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      text-align: center;
+
+      p {
+        font-size: 20px;
+      }
+    }
+
+    .cardsContainer {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding-top: 50px;
+
+      .card {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 45%;
+
+        &:hover {
+          cursor: pointer;
+
+          & p {
+            opacity: 1;
+          }
+        }
+
+        p {
+          opacity: 0;
+          pointer-events: none;
+          display: flex;
+          align-items: center;
+          background-color: rgba(0, 0, 0, 0.6);
+          height: 100%;
+          width: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          color: $White;
+          text-align: center;
+          padding: 0 10%;
+          transition: opacity 0.3s cubic-bezier(0.33, 1, 0.68, 1);
+        }
+
+        .image {
+          width: 80%;
+          img {
+            width: 100%;
           }
         }
       }
