Ajout de la div picto container

--- a/src/sass/pages/_produits.scss
+++ b/src/sass/pages/_produits.scss
@@ -1,6 +1,8 @@
 #Produits {
-  .picto {
-    width: 25%;
-    background-color: black;
+  .pictoContainer {
+    .picto {
+      width: 25%;
+      background-color: black;
+    }
   }
 }
