--- a/src/sass/pages/_produits.scss
+++ b/src/sass/pages/_produits.scss
@@ -1,8 +1,37 @@
 #Produits {
+  height: 100vh;
+
   .pictoContainer {
+    max-width: 1440px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    margin: auto;
+    padding: 0 5vw;
+
     .picto {
-      width: 25%;
-      background-color: black;
+      width: 300px;
+      height: 300px;
+      object-fit: cover;
+      object-position: center;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      .image {
+        width: 100%;
+        height: 100%;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
     }
   }
 }
