--- a/src/style/style.css
+++ b/src/style/style.css
@@ -342,6 +342,7 @@ header .right .cartShopping:hover {
   position: fixed;
   top: 0;
   left: 0;
+  pointer-events: none;
   width: 100%;
   height: 100%;
 }
