--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family: "Golos Text";
 }
@@ -142,6 +146,20 @@ header .right .cartShopping {
 }
 header .right .cartShopping:hover {
   cursor: pointer;
+}
+
+.ScrollBarContainer {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+}
+.ScrollBarContainer .scrollBar {
+  width: 100%;
+  height: 100%;
+  background-color: #b10000;
+  transform-origin: left;
 }
 
 #Accueil .FirstSection {
