--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,6 +3,7 @@
 @import "../sass/fonts";
 
 @import "../sass/components/header";
+@import "../sass/components/scrollBar";
 
 @import "../sass/pages/accueil";
 @import "../sass/pages/histoire";
