Ajout de la feuille de style pour la page Produit

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,4 +7,5 @@
 
 @import "../sass/pages/accueil";
 @import "../sass/pages/histoire";
+@import "../sass/pages/produit";
 @import "../sass/pages/produits";
