--- a/src/sass/pages/_accueil.scss
+++ b/src/sass/pages/_accueil.scss
@@ -115,6 +115,7 @@
       .decoupesContainer {
         display: flex;
         gap: 10px;
+        transition: transform 0.65s cubic-bezier(0.65, 0, 0.35, 1);
 
         .decoupe {
           .image {
