--- a/src/sass/pages/_accueil.scss
+++ b/src/sass/pages/_accueil.scss
@@ -1,6 +1,12 @@
 #Accueil {
   color: $Red;
 
+  .SecondSection,
+  .ThirdSection {
+    max-width: 1440px;
+    margin: auto;
+  }
+
   .FirstSection {
     position: relative;
     height: 81vh;
@@ -69,8 +75,6 @@
   }
 
   .SecondSection {
-    max-width: 1440px;
-    margin: auto;
     padding: 100px 0 100px 5vw;
     // margin: 0 5v/w;
     overflow: hidden;
@@ -134,6 +138,51 @@
           p {
             padding: 20px 0 0;
             text-align: center;
+          }
+        }
+      }
+    }
+  }
+
+  .ThirdSection {
+    padding: 50px 5vw;
+    text-align: center;
+
+    h2 {
+      font-family: "AwesomeSerif";
+      font-size: 50px;
+    }
+
+    p {
+      font-size: 20px;
+    }
+    .blocksContainer {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+
+      .block {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 40px;
+        border: 2px solid $Red;
+        border-radius: 10px;
+        padding: 70px 20%;
+
+        .btn {
+          font-size: 20px;
+          text-transform: uppercase;
+          border: 2px solid $Red;
+          width: fit-content;
+          padding: 10px 0;
+          width: 50%;
+          border-radius: 25px;
+          transition: 0.4s;
+
+          &:hover {
+            background: $Red;
+            color: $White;
           }
         }
       }
