--- a/src/sass/pages/_accueil.scss
+++ b/src/sass/pages/_accueil.scss
@@ -148,6 +148,11 @@
     padding: 50px 5vw;
     text-align: center;
 
+    .title {
+      margin-bottom: 100px;
+      padding: 0 2vw;
+    }
+
     h2 {
       font-family: "AwesomeSerif";
       font-size: 50px;
