--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -24,10 +24,13 @@ header {
 
     .image {
       height: 100px;
+      width: 180%;
       pointer-events: none;
 
       img {
-        transform: scale(4);
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
 
