--- a/src/sass/pages/_histoire.scss
+++ b/src/sass/pages/_histoire.scss
@@ -29,8 +29,7 @@
         padding-left: 5vw;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        // gap: 30px;
+        gap: 30px;
 
         .paragraph {
           display: flex;
