--- a/src/sass/pages/_histoire.scss
+++ b/src/sass/pages/_histoire.scss
@@ -88,15 +88,18 @@
           pointer-events: none;
           display: flex;
           align-items: center;
-          background-color: rgba(0, 0, 0, 0.6);
+          background-color: $White;
           height: 100%;
           width: 100%;
           position: absolute;
           top: 0;
           left: 0;
-          color: $White;
+          color: $Red;
           text-align: center;
-          padding: 0 10%;
+          padding: 0 20%;
+          line-height: 25px;
+          border-radius: 10px;
+          box-shadow: 0px 0px 31px 4px rgba(0, 0, 0, 0.158);
           transition: opacity 0.3s cubic-bezier(0.33, 1, 0.68, 1);
         }
 
