--- a/src/style/style.css
+++ b/src/style/style.css
@@ -419,15 +419,18 @@ header .right .cartShopping:hover {
   pointer-events: none;
   display: flex;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: #ffffff;
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  color: #ffffff;
+  color: #b10000;
   text-align: center;
-  padding: 0 10%;
+  padding: 0 20%;
+  line-height: 25px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 31px 4px rgba(0, 0, 0, 0.158);
   transition: opacity 0.3s cubic-bezier(0.33, 1, 0.68, 1);
 }
 #Histoire .SecondSection .cardsContainer .card .image {
