--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -6,6 +6,7 @@
 @import "../sass/components/scrollBar";
 
 @import "../sass/pages/accueil";
+@import "../sass/pages/faq";
 @import "../sass/pages/histoire";
 @import "../sass/pages/produit";
 @import "../sass/pages/produits";
