--- a/src/style/style.css
+++ b/src/style/style.css
@@ -412,6 +412,9 @@ header .right .cartShopping:hover {
   border: 1px solid #b10000;
   background: none;
 }
+#FAQ .faqBlockContainer .questionContainer .question button:hover {
+  cursor: pointer;
+}
 #FAQ .faqBlockContainer .questionContainer .question button, #FAQ .faqBlockContainer .questionContainer .question button::before, #FAQ .faqBlockContainer .questionContainer .question button::after {
   transition: 0.25s cubic-bezier(0.65, 0, 0.35, 1);
 }
@@ -433,6 +436,10 @@ header .right .cartShopping:hover {
   width: 2px;
   border-radius: 10px;
 }
+#FAQ .faqBlockContainer .questionContainer .answer {
+  padding: 20px 40px 20px 20px;
+}
+
 #Histoire {
   display: flex;
   flex-direction: column;
