--- a/src/styles/sass/pages/_accueil.scss
+++ b/src/styles/sass/pages/_accueil.scss
@@ -206,6 +206,11 @@
         border: 2px solid $Red;
         border-radius: 10px;
         padding: 70px 20%;
+        .btns-container{
+           display: flex;
+           gap: 36px;
+           width: 100%;
+        }
 
         .btn {
           font-size: 20px;
