feat(FAQ): add category selection and refactor code - Modified the FAQ page to include category selection for easier navigation - Refactored the code for better structure and maintainability.

--- a/src/styles/sass/components/_header.scss
+++ b/src/styles/sass/components/_header.scss
@@ -38,7 +38,7 @@ header {
       display: flex;
       gap: 2vw;
 
-      a {
+      a, li {
         font-weight: 500;
         position: relative;
 
