--- a/src/styles/sass/pages/_faq.scss
+++ b/src/styles/sass/pages/_faq.scss
@@ -27,6 +27,7 @@
         display: flex;
         justify-content: space-between;
         padding: 10px 0;
+        height: fit-content;
 
         &:hover {
           cursor: pointer;
